--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -6,6 +6,10 @@
   flex-wrap: wrap;
 }
 
+.flex-column {
+  flex-direction: column;
+}
+
 .align-center {
   align-items: center;
 }
@@ -31,7 +35,7 @@
 }
 
 .container {
-  max-width: 1360px;
+  max-width: 1366px;
   width: 100%;
   margin: auto;
 }
