--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,14 @@
-@import '~normalize.css/normalize.css';
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700');
 @import '~element-ui/lib/theme-default/index.css';
 @import './layout';
 
 body {
-  //background-color: lightgrey;
+  background-color: #eeeff2;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 *, h1 {
@@ -13,6 +18,7 @@ body {
 
 h1 {
   font-size: 16px;
+  margin: 0;
 }
 
 ul {
@@ -22,4 +28,22 @@ ul {
 a {
   text-decoration: none;
   color: currentColor;
+}
+
+.dot {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  z-index: -1;
+  opacity: 0.3;
+}
+
+.dot-blue {
+  background-color: rgba(60, 176, 181, 0.8);
+}
+
+.dot-red {
+  background-color: #e54b50;
 }
