--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,3 +47,42 @@ a {
 .dot-red {
   background-color: #e54b50;
 }
+
+.section-header {
+  font-size: 13px;
+  font-weight: 700;
+  color: #5f5f5f;
+  text-transform: uppercase;
+}
+
+.doughnut-table {
+  width: 100%;
+}
+
+.header-filter {
+  margin: 30px 0px;
+  .section-header {
+    margin-bottom: 0;
+  }
+  li {
+    color: #5f5f5f;
+    font-size: 11px;
+    cursor: pointer;
+    margin-left: 30px;
+    position: relative;
+    &.active {
+      color: #4f43c1;
+      &::after {
+        content: '';
+        position: absolute;
+        background-color: #4f43c1;
+        top: 130%;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 3px;
+        height: 3px;
+        border-radius: 50%;
+      }
+    }
+  }
+}
